# waxell-agent-examples

./: .env.example  .gitignore  LICENSE  README.md
examples/01-hello-waxell/: README.md  agent.py  setup.sh
examples/02-anthropic-tool-use/: README.md  agent.py  requirements.txt  setup.sh
examples/03-langgraph-research/: README.md  agent.py  requirements.txt  setup.sh
examples/04-policy-block-pii/: README.md  agent.py  policies.py  setup.sh
examples/05-policy-warn-cost/: README.md  agent.py  policies.py  setup.sh
examples/06-end-user-id/: README.md  agent.py  policies.py  setup.sh
examples/07-streaming-chat/: README.md  agent.py  setup.sh
examples/08-rag-conversational/: README.md  agent.py  requirements.txt  setup.sh
examples/09-crewai-multi-agent/: README.md  agent.py  requirements.txt  setup.sh
examples/10-judge-evaluation/: README.md  agent.py  policies.py  requirements.txt  setup.sh
examples/11-bedrock-agentcore-runtime-byo/: README.md
examples/11-bedrock-agentcore-runtime-byo/src/: main.py
examples/12-bedrock-agent/: README.md  agent.py  requirements.txt
examples/13-bedrock-agentcore-harness/: README.md  agent.py  requirements.txt
examples/14-bedrock-agentcore-runtime-byo/: README.md  pyproject.toml
examples/14-bedrock-agentcore-runtime-byo/src/: main.py
scripts/: _make-venv.sh  seed-env-from-wax.sh  seed_env_from_wax.py  setup-example.sh  setup_example.py
