[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-agentcore-runtime-byo"
version = "0.1.0"
requires-python = ">=3.12"

# These deps are pip-installed INSIDE the AgentCore Runtime microVM at
# provision time (agentcore CLI uses uv to resolve + bundle them).
dependencies = [
    "waxell-observe[bedrock]>=0.1.1",
    "bedrock-agentcore>=1.0.3",
    "boto3>=1.40,<2.0",
    "botocore>=1.40,<2.0",
]
